<resources>
    <string name="app_name">Ticku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_title">School</string>
    <string name="holiday_title">Holiday</string>
    <string name="business_title">Business</string>
    <string name="shopping_title">Shopping</string>
    <string name="search_title">Search todo</string>
    <string name="todo_categories_title">Todo Categories</string>
    <string name="today_task_title">Today\'s Tasks</string>
    <string name="add_title">Add New Task</string>
    <string name="add_desc">Be productive today, and let\'s make some wonderful world with it.</string>
    <string name="add_new_task">Add New Task ...</string>
    <string name="empty_add_msg">Please Enter Your Task :)</string>
    <string name="add_toast">SuccessFully task added</string>
    <string name="No_dialog_msg">No</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_content">Are you sure?</string>
    <string name="delete_task_msg">Task Deleted SuccessFully</string>
</resources>