<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/add_fragment_shape"
    tools:context=".view.fragments.addEdit.AddFragment">

    <ImageView
        android:id="@+id/addIconIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin_36"
        android:src="@drawable/assign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/addTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addIconIv" />

    <TextView
        android:id="@+id/addDescTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_24"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/add_desc"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addTitleTv" />

    <RadioGroup
        android:id="@+id/addRadioGp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/addEditEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/addSchoolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:buttonTint="@color/gray"
            android:padding="@dimen/padding_2"
            android:text="@string/school_title"
            android:textColor="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/addHolidayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:buttonTint="@color/gray"
            android:padding="@dimen/padding_2"
            android:text="@string/holiday_title"
            android:textColor="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/addBusinessRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:buttonTint="@color/gray"
            android:padding="@dimen/padding_2"
            android:text="@string/business_title"
            android:textColor="@android:color/darker_gray" />

        <RadioButton
            android:id="@+id/addShoppingRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/gray"
            android:padding="@dimen/padding_2"
            android:text="@string/shopping_title"
            android:textColor="@android:color/darker_gray" />
    </RadioGroup>

    <EditText
        android:id="@+id/addEditEt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/search_shape"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/add_new_task"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="@dimen/padding_8"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <ImageView
        android:id="@+id/addAddOrEditIv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/margin_36"
        android:src="@drawable/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRadioGp"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>